@@ -264,9 +264,10 @@ void dumpLinks(s_fidoconfig *config, FILE *f)
 	fprintf(f, "forwardRequests     on\n");
 	  if (link.forwardAreaPriority)
 	printf("forwardAreaPriority %u\n", link.forwardAreaPriority);
-      if (link.fReqFromUpLink != 0)
-	fprintf(f, "fRequestFromUpLink  on\n");
-
+	  
+	  if (link.denyFRA) fprintf(f, "denyFwdReqAccess\n");
+	  if (link.denyUFRA) fprintf(f, "denyUncondFwdReqAccess\n");
+	  
       switch (link.forwardPkts) {
       case fSecure:
 	fprintf(f, "forwardPkts         secure\n");
